--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: 
+    name: testapp
 spec:
     type: LoadBalancer
     ports:
     - port: 80 
     selector:
-        app: 
+        app: testapp
