--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -1,19 +1,19 @@
 apiVersion : apps/v1
 kind: Deployment
 metadata:
-  name: testapp
+  name: molly100VmCloud-1738.default
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: testapp
+      app: molly100VmCloud-1738.default
   template:
     metadata:
       labels:
-        app: testapp
+        app: molly100VmCloud-1738.default
     spec:
       containers:
         - name: testapp
-          image: labo5test.azurecr.io/testapp
+          image: labo5test.azurecr.io/molly100VmCloud-1738.default
           ports:
           - containerPort: 80
