--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: testapp
+    name: molly100VmCloud-1738.default
 spec:
     type: LoadBalancer
     ports:
     - port: 80 
     selector:
-        app: testapp
+        app: molly100VmCloud-1738.default
